# stable-diffusion.cpp-ROCm

./: .gitmodules  CMakeLists.txt
